2008-03-20  Michael Smith <msmith@fluendo.com>

	* flumotion/component/base/admin_gtk.py:
	  Don't pass unset values. Avoids an exception subtracting None from an
	  integer.
	* flumotion/component/producers/soundcard/soundcard.py:
	  Zero is not a good number to divide by.

2008-03-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py:
	Emit signal with the pad not the name of the pad, maybe this 
	will help it work.

2008-03-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/worker/base.py (JobProcessProtocol.processEnded):
	Don't blame GStreamer's corrupt registry for any early exit.

2008-03-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/python.py (makedirs):
	For python < 2.5 provide a local copy of python2.5's os.makedirs()
	that adds checks for EEXIST.

	* flumotion/common/bundle.py (Unbundler.unbundle):
	* flumotion/common/common.py (ensureDir):
	* flumotion/common/registry.py (ComponentRegistry.save):
	* flumotion/manager/admin.py (AdminAvatar._saveFlowFile):
	* flumotion/service/service.py (Servicer.createManager,
	  Servicer.createWorker):
	Use our new local makedirs() function. Fixes #865.

2008-03-18  Michael Smith <msmith@fluendo.com>

	* flumotion/component/base/admin_gtk.py:
	  Check for None and 0.

2008-03-18  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/base/admin_gtk.py
	(ComponentAdminGtkNode._updateVSize): check for None instead of 0,
	remove trailing whitespace.

2008-03-17  Michael Smith <msmith@fluendo.com>

	* flumotion/component/base/component.glade:
	  Change the glade file to remove some unused rows, and to set the label
	  defaults to N/A, rather than nonsense values.

2008-03-17  Michael Smith <msmith@fluendo.com>

	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/base.xml:
	* flumotion/component/base/component.glade:
	* po/POTFILES.in:
	  Add a component tab for all components.
	  Displays uptime, cpu usage, virtual size, etc.